Fixed #40 z-index issue - carousel: z1 - header: z2 - sidebar: z3

--- a/scss/3.layout/_2.nav.scss
+++ b/scss/3.layout/_2.nav.scss
@@ -7,7 +7,7 @@
     border: 1px solid red;
     right: 0;
     top: 0;
-    z-index: 2;
+    z-index: 3;
 }
 
 // ==========================================================================
@@ -15,6 +15,7 @@
 // ==========================================================================
 
 .nav {
+    z-index: 2;
     @include section("nav");
 
     position: relative;
